<?xml version="1.0" encoding="utf-8"?>
<resources>

    <color name="white">	    #FFFFFF</color>

    <string name="app_name">Reme</string>
    <string name="action_settings">Settings</string>
    <string name="and_capitalized">AND</string>
    <string name="or_capitilized">OR</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="dot">.</string>
    <string name="doubledot">:</string>
    <string name="event_settings_1">Remember me when</string>
    <string name="wheninrangeof">When in range of</string>
    <string name="selectlocation">Select Location..</string>
    <string name="select">Select..</string>
    <string name="selectspecificdate">Select a specific date..</string>
    <string name="selectday">Select Day..</string>
    <string name="mon">Mo</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>

</resources>